package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"sync"

	// Import package ‡∏ó‡∏µ‡πà generate ‡∏°‡∏≤ (‡πÄ‡∏õ‡∏•‡∏µ‡πà‡∏¢‡∏ô path ‡∏ï‡∏≤‡∏° project ‡∏à‡∏£‡∏¥‡∏á)
	pb "github.com/yourusername/cowboy_arena/proto"

	"github.com/joho/godotenv"
	"google.golang.org/grpc"
)

// --- Config Part ---
type Config struct {
	Port string
}

func LoadConfig() Config {
	return Config{
		// gRPC ‡∏°‡∏±‡∏Å‡πÑ‡∏°‡πà‡πÉ‡∏ä‡πâ 8080 (‡∏ó‡∏µ‡πà‡πÄ‡∏õ‡πá‡∏ô HTTP) ‡∏≠‡∏≤‡∏à‡∏à‡∏∞‡πÉ‡∏ä‡πâ 50051 ‡∏´‡∏£‡∏∑‡∏≠‡∏û‡∏≠‡∏£‡πå‡∏ï‡πÄ‡∏î‡∏¥‡∏°‡∏Å‡πá‡πÑ‡∏î‡πâ
		Port: getEnv("DUELIST_PORT", "50051"),
	}
}

func getEnv(key, fallback string) string {
	if value, exists := os.LookupEnv(key); exists {
		return value
	}
	return fallback
}

// --- Domain Implementation ---
// ‡∏™‡∏£‡πâ‡∏≤‡∏á struct ‡πÄ‡∏û‡∏∑‡πà‡∏≠ implement interface ‡∏Ç‡∏≠‡∏á gRPC
type duelistServer struct {
	pb.UnimplementedDuelistServiceServer
	db map[string]*pb.CowboyResponse
	mu sync.Mutex
}

// Implement: CreateCowboy
func (s *duelistServer) CreateCowboy(ctx context.Context, req *pb.CreateCowboyRequest) (*pb.CowboyResponse, error) {
	s.mu.Lock()
	defer s.mu.Unlock()

	cowboy := &pb.CowboyResponse{
		Id:       req.Id,
		Name:     req.Name,
		Health:   req.Health,
		Damage:   req.Damage,
		Speed:    req.Speed,
		Accuracy: req.Accuracy,
	}

	s.db[req.Id] = cowboy
	fmt.Printf("[Duelist] Created: %s (ID: %s)\n", req.Name, req.Id)
	return cowboy, nil
}

// Implement: GetCowboy
func (s *duelistServer) GetCowboy(ctx context.Context, req *pb.GetCowboyRequest) (*pb.CowboyResponse, error) {
	s.mu.Lock()
	defer s.mu.Unlock()

	cowboy, exists := s.db[req.Id]
	if !exists {
		return nil, fmt.Errorf("cowboy not found with id: %s", req.Id)
	}

	return cowboy, nil
}

func main() {
	if err := godotenv.Load("../../.env"); err != nil {
		log.Println("Note: ‡πÑ‡∏°‡πà‡∏û‡∏ö‡πÑ‡∏ü‡∏•‡πå .env")
	}

	cfg := LoadConfig()

	// 1. ‡∏™‡∏£‡πâ‡∏≤‡∏á Listener ‡∏ö‡∏ô TCP
	lis, err := net.Listen("tcp", ":"+cfg.Port)
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	// 2. ‡∏™‡∏£‡πâ‡∏≤‡∏á gRPC Server
	grpcServer := grpc.NewServer()

	// 3. Register Service ‡∏ó‡∏µ‡πà‡πÄ‡∏£‡∏≤ implement ‡πÄ‡∏Ç‡πâ‡∏≤‡πÑ‡∏õ
	service := &duelistServer{
		db: make(map[string]*pb.CowboyResponse),
	}
	pb.RegisterDuelistServiceServer(grpcServer, service)

	fmt.Printf("ü§† Duelist Service (gRPC) running on port :%s\n", cfg.Port)
	if err := grpcServer.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
